--- a/Index.css
+++ b/Index.css
@@ -5,7 +5,7 @@
 }
 
 header{
-    background-image: url("./images/Beach.jpg.jpg");
+    background-image: url("./images/Beach.jpg");
     height: 100vh;
     width: 100vw;
     background-size: cover;
